# GoogleTest_Example

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Jenkinsfile  README.md  compile.sh
inc/: counting_zeros.h  equal.h  min.h  sum.h
include/: less_than_zero.h
source/: equal.cpp  main.cpp  sum.cpp
src/: equal.cpp  main.cpp  sum.cpp
test/: test_counting_zeros.cpp  test_equal.cpp  test_less_than_zero.cpp  test_min.cpp  test_sum.cpp
test/source/: test_equal.cpp  test_less_than_zero.cpp  test_min.cpp
